samples/_failures_safe/1761295358_869cb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_038cff3e.c: In function ‘print_token’:
./samples/SAFE/__tmp_038cff3e.c:169:33: error: missing terminating " character
  169 |         "NUMBER", "IDENTIFIER", "OPERATOR
      |                                 ^~~~~~~~~
./samples/SAFE/__tmp_038cff3e.c:169:9: error: expected expression at end of input
  169 |         "NUMBER", "IDENTIFIER", "OPERATOR
      |         ^~~~~~~~
./samples/SAFE/__tmp_038cff3e.c:169:9: error: expected declaration or statement at end of input
